add_subdirectory(approximatecoplanar)
add_subdirectory(attribute)
add_subdirectory(chipper)
add_subdirectory(colorinterp)
add_subdirectory(colorization)
add_subdirectory(computerange)
add_subdirectory(crop)
add_subdirectory(decimation)
add_subdirectory(divider)
add_subdirectory(eigenvalues)
add_subdirectory(estimaterank)
add_subdirectory(ferry)
add_subdirectory(hag)
add_subdirectory(iqr)
add_subdirectory(kdistance)
add_subdirectory(lof)
add_subdirectory(mad)
add_subdirectory(merge)
add_subdirectory(mongus)
add_subdirectory(mortonorder)
add_subdirectory(normal)
add_subdirectory(outlier)
add_subdirectory(pmf)
add_subdirectory(radialdensity)
add_subdirectory(randomize)
add_subdirectory(range)
add_subdirectory(reprojection)
add_subdirectory(sample)
add_subdirectory(smrf)
add_subdirectory(sort)
add_subdirectory(splitter)
add_subdirectory(stats)
add_subdirectory(streamcallback)
add_subdirectory(transformation)

set(PDAL_TARGET_OBJECTS ${PDAL_TARGET_OBJECTS} PARENT_SCOPE)
